# aoc-2023

./: .gitignore  compile_linux.sh  meson-linux-clang.ini  meson.build  recompile_linux.sh
src/: 1a.c  1b.c  2a.c  2b.c  3a.c  3b.c  4a.c  4b.c
