project('my_project', 'c',
  version: '0.1',
  default_options: ['c_std=c11'])
executable('1a','src/1a.c')
executable('1b','src/1b.c')
executable('2a','src/2a.c')
executable('2b','src/2b.c')
executable('3a','src/3a.c')
executable('3b','src/3b.c')
executable('4a','src/4a.c')
executable('4b','src/4b.c')
